[gd_scene load_steps=3 format=2]

[ext_resource path="res://stages/Level0.tscn" type="PackedScene" id=1]
[ext_resource path="res://stages/SceneSwitcher.gd" type="Script" id=2]

[node name="SceneSwitcher" type="Node"]
script = ExtResource( 2 )

[node name="LevelContainer" type="Node" parent="."]

[node name="TitleScreen" parent="LevelContainer" instance=ExtResource( 1 )]

[node name="MenuScreen" type="ColorRect" parent="."]
visible = false
margin_left = 212.0
margin_top = 70.0
margin_right = 812.0
margin_bottom = 370.0
color = Color( 0.0588235, 0.054902, 0.054902, 1 )

[node name="TitleButton" type="Button" parent="MenuScreen"]
margin_left = 35.0
margin_top = 20.0
margin_right = 169.0
margin_bottom = 64.0
text = "Back to Title"

[node name="MenuButton" type="Button" parent="."]
margin_left = 948.0
margin_top = 15.0
margin_right = 990.0
margin_bottom = 52.0
text = "Menu"

[connection signal="pressed" from="MenuButton" to="." method="_on_MenuButton_pressed"]
